--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-xl">Something</h1>
-    <p class="govuk-body">And another thing</p>
+    <h1 class="govuk-heading-l">DLUHC Dataset Editor</h1>
+    <p class="govuk-body"><a href="{{url_for('main.datasets')}}">Datasets</a></p>
   </div>
 </div>
 {% endblock content %}
