--- a/application/templates/datasets.html
+++ b/application/templates/datasets.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     {% for dataset in datasets %}
-      <p class="govuk-body"><a href="{{url_for('main.dataset', name=dataset.name)}}">{{ dataset.name }}</a></p>
+      <p class="govuk-body"><a href="{{url_for('main.dataset', name=dataset.name)}}">{{ dataset }}</a></p>
     {% endfor %}
 
   </div>
