--- a/application/templates/dataset.html
+++ b/application/templates/dataset.html
@@ -8,7 +8,7 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body"><a href="{{ dataset.name}}">{{ dataset.name }}</a></p>
+    <p class="govuk-body"><a href="{{ dataset.dataset}}">{{ dataset.name }}</a></p>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -16,10 +16,10 @@
     <p class="govuk-body">Fields</p>
     <ul class="govuk-list govuk-list--bullet">
       {% for field in dataset.fields %}
-        <li>{{field.name}}</li>
+        <li>{{field.field}}</li>
       {% endfor %}
     </ul>
-    <p class="govuk-body"><a href="{{url_for('main.entries', dataset=dataset.name)}}">Entries in this dataset</a></p>
+    <p class="govuk-body"><a href="{{url_for('main.entries', dataset=dataset.dataset)}}">Entries in this dataset</a></p>
   </div>
 </div>
 {% endblock content %}
