--- a/application/templates/entries.html
+++ b/application/templates/entries.html
@@ -8,7 +8,7 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body"><a href="{{ url_for('main.dataset', name=dataset.name)}}">{{ dataset.name }}</a></p>
+    <p class="govuk-body"><a href="{{ url_for('main.dataset', name=dataset.dataset)}}">{{ dataset.name }}</a></p>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -18,7 +18,7 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             {% for field in dataset.fields %}
-            <th scope="col" class="govuk-table__header">{{field.name}}</th>
+            <th scope="col" class="govuk-table__header">{{field.field}}</th>
             {% endfor %}
           </tr>
         </thead>
@@ -26,7 +26,7 @@
           {% for entry in dataset.entries %}
           <tr class="govuk-table__row">
             {% for field in dataset.fields %}
-              <td class="govuk-table__cell">{{entry.data[field.name]}}</td>
+              <td class="govuk-table__cell">{{entry.data[field.field]}}</td>
             {% endfor %}
           </tr>
           {% endfor %}
