--- a/application/templates/dataset.html
+++ b/application/templates/dataset.html
@@ -3,22 +3,19 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-l">DLUHC Dataset Editor</h1>
+    <span class="govuk-caption-xl">Dataset</span>
+    <h1 class="govuk-heading-l">{{ dataset.name }}</h1>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body"><a href="{{ dataset.dataset}}">{{ dataset.name }}</a></p>
-  </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body">Fields</p>
+    <h2 class="govuk-heading-m">Fields</h2>
     <ul class="govuk-list govuk-list--bullet">
       {% for field in dataset.fields %}
         <li>{{field.field}}</li>
       {% endfor %}
     </ul>
+    <h2 class="govuk-heading-m">Entries</h2>
     <p class="govuk-body"><a href="{{url_for('main.entries', dataset=dataset.dataset)}}">Entries in this dataset</a></p>
   </div>
 </div>
