--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -38,21 +38,35 @@
 {% endblock %}
 
 {% block mastHead %}
-  <header class="govuk-header {{ app_header_classes }}" role="banner" data-module="govuk-header">
-    <div class="govuk-header__container govuk-width-container app-govuk-header__container">
-      <div class="header-proposition">
-        <a href="/" class="govuk-header__link govuk-header__link--service-name">
-          Data Standards
-          <span class="govuk-header__product-name">
-          Dataset management
-          </span>
-        </a>
-        <!--<strong class="govuk-tag govuk-phase-banner__content__tag app-header__tag">
-          research tool
-        </strong>-->
-      </div>
+<header class="govuk-header " role="banner" data-module="govuk-header">
+  <div class="govuk-header__container govuk-width-container">
+    <div class="govuk-header__logo">
+      <a href="#" class="govuk-header__link govuk-header__link--homepage">
+        DLUHC Datasets
+      </a>
     </div>
-  </header>
+    <div class="govuk-header__content">
+      {# <a href="#" class="govuk-header__link govuk-header__service-name">
+        Dataset manager
+      </a> #}
+      <nav aria-label="Menu" class="govuk-header__navigation">
+        <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" hidden>Menu</button>
+        <ul id="navigation" class="govuk-header__navigation-list">
+          <li class="govuk-header__navigation-item">
+            <a class="govuk-header__link" href="#">
+              Datasets
+            </a>
+          </li>
+          <li class="govuk-header__navigation-item">
+            <a class="govuk-header__link" href="#">
+              Support
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
 {% endblock mastHead %}
 
 {% block beforeContent %}
