--- a/application/templates/entries.html
+++ b/application/templates/entries.html
@@ -1,10 +1,11 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <span class="govuk-caption-l">Records</span>
-    <h1 class="govuk-heading-l">{{ dataset.name }}</h1>
+    <span class="govuk-caption-l">{{ dataset.name }}</span>
+    <h1 class="govuk-heading-l">Records</h1>
   </div>
   <div class="govuk-grid-column-one-quarter govuk-!-text-align-right">
     {{
