--- a/application/templates/entries.html
+++ b/application/templates/entries.html
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     <span class="govuk-caption-l">{{ dataset.name }}</span>
-    <h1 class="govuk-heading-l">Records</h1>
+    <h1 class="govuk-heading-l">{{ dataset.entries | length }} records</h1>
   </div>
   <div class="govuk-grid-column-one-quarter govuk-!-text-align-right">
     {{
@@ -48,7 +48,6 @@
             <td class="govuk-table__cell">
               {{
                 buttonMenu({
-                  "text": "blah",
                   "items": [
                     {
                       "element": "a",
