--- a/application/templates/entries.html
+++ b/application/templates/entries.html
@@ -24,6 +24,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <hr class="govuk-section-break govuk-section-break--visible">
+    {% if dataset.entries | length > 0 %}
     <section class="app-dataset-records">
       <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -64,6 +65,13 @@
         </tbody>
       </table>
     </section>
+    {% else %}
+      {{
+        govukInsetText({
+          'text': 'There are no records for the ' + dataset.name + ' dataset'
+        })
+      }}
+    {% endif %}
   </div>
 </div>
 {% endblock content %}
