add record form

--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -14,7 +14,8 @@
         "items": [
           {
             "element": "a",
-            "text": "Add record"
+            "text": "Add record",
+            "href": url_for("main.add_record", dataset=dataset.dataset),
           },
         ]
       })
