--- a/application/templates/add_record.html
+++ b/application/templates/add_record.html
@@ -13,9 +13,9 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-  <form method="POST" action="{{ url_for('main.add_entry', dataset=dataset.dataset) }}">
+  <form method="POST" action="{{ url_for('main.add_record', dataset=dataset.dataset) }}">
     <div class="govuk-form-group">
-      {% for field in dataset.fields %}
+      {% for field in form_fields %}
         <label class="govuk-label" for="{{field.field}}">
           {{form[field.field].label }}
         </label>
