--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -29,11 +29,11 @@
     <hr class="govuk-section-break govuk-section-break--visible">
     {% if dataset.entries | length > 0 %}
     <section class="app-dataset-records">
-      <table class="govuk-table">
+      <table class="govuk-table app-data-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             {% for field in dataset.fields %}
-            <th scope="col" class="govuk-table__header">{{field.field}}</th>
+            <th scope="col" class="govuk-table__header">{{field.field | capitalize}}</th>
             {% endfor %}
             {% if session["user"] %}
               <th scope="col" class="govuk-table__header">
