--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -16,3 +16,20 @@ $app-images-path: "/statics/images/";
     }
   }
 }
+
+.app-data-table {
+  table-layout:fixed;
+  border-collapse: collapse;
+  thead {
+    tr {
+      background-color: govuk-colour('light-grey');
+    }
+  }
+  th, td {
+    padding: 0.35em;
+    @include govuk-font(19)
+  }
+  th {
+    @include govuk-font(16, bold, true)
+  }
+}
