--- a/application/templates/add_record.html
+++ b/application/templates/add_record.html
@@ -8,7 +8,7 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body"><a href="{{ dataset.dataset}}">{{ dataset.name }}</a></p>
+    <p class="govuk-body"><a href="{{ url_for('main.dataset', name=dataset.dataset) }}"">{{ dataset.name }}</a></p>
   </div>
 </div>
 <div class="govuk-grid-row">
