--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -67,6 +67,7 @@
           {% endfor %}
         </tbody>
       </table>
+      <p class="govuk-body"><a href="{{dataset.dataset}}/schema">View schema</a></p>
     </section>
     {% else %}
       {{
