--- a/application/templates/datasets.html
+++ b/application/templates/datasets.html
@@ -20,7 +20,7 @@
             <a href="{{url_for('main.dataset', name=dataset.dataset)}}">{{ dataset.name }}</a>
           </th>
           <td class="govuk-table__cell govuk-table__cell--numeric">
-            09/12/2023
+            {{dataset.last_updated.strftime("%d/%m/%Y")}}
           </td>
           <td class="govuk-table__cell govuk-table__cell--numeric">
             <ul class="govuk-list app-list--inline govuk-!-margin-bottom-0">
