--- a/application/templates/add_record.html
+++ b/application/templates/add_record.html
@@ -16,11 +16,15 @@
   <form method="POST" action="{{ url_for('main.add_record', dataset=dataset.dataset) }}">
     <div class="govuk-form-group">
       {% for field in form_fields %}
-        <label class="govuk-label" for="{{field.field}}">
-          {{form[field.field].label }}
-        </label>
-        {{ form[field.field] }}
-      {% endfor %}
+    {{ govukInput({
+        "label": {
+          "text": field.name,
+          "classes": "govuk-label",
+        },
+        "id": field.field,
+        "name": field.field
+        }) }}
+        {% endfor %}
     </div>
     {{ form.csrf_token }}
     <input type="submit" value="Add">
