--- a/application/templates/edit_record.html
+++ b/application/templates/edit_record.html
@@ -11,13 +11,18 @@
     <form method="POST" action="{{ url_for('main.edit_record', dataset=dataset.dataset, record_id=record.id) }}">
       <div class="govuk-form-group">
         {% for field in form_fields %}
-        <label class="govuk-label" for="{{field.field}}">
-          {{form[field.field].label }}
-        </label>
-        {{ form[field.field] }}
+            {{ govukInput({
+            "label": {
+            "text": field.name,
+            "classes": "govuk-label",
+            },
+            "id": field.field,
+            "name": field.field,
+            "value": record.data.get(field.field, ''),
+            })
+          }}
         {% endfor %}
-      </div>
-      {{ form.csrf_token }}
+        {{ form.csrf_token }}
       <input type="submit" value="Edit">
     </form>
   </div>
