--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -31,6 +31,7 @@
 {%- from 'govuk_frontend_jinja/components/textarea/macro.html' import govukTextarea -%}
 {%- from 'govuk_frontend_jinja/components/warning-text/macro.html' import govukWarningText -%}
 {%- from 'partials/components/button-menu/macro.html' import buttonMenu -%}
+{%- from 'partials/components/field/macro.html' import appField -%}
 
 {% block stylesheets %}
   <link rel="stylesheet" href="/static/stylesheets/application.css">
