--- a/application/templates/add_record.html
+++ b/application/templates/add_record.html
@@ -3,12 +3,8 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-l">DLUHC Dataset Editor</h1>
-  </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
-    <p class="govuk-body"><a href="{{ url_for('main.dataset', name=dataset.dataset) }}"">{{ dataset.name }}</a></p>
+    <span class="govuk-caption-l">{{ dataset.name }}</span>
+    <h1 class="govuk-heading-l">Add a record</h1>
   </div>
 </div>
 {% if error_list %}
@@ -23,19 +19,16 @@
   <form method="POST" action="{{ url_for('main.add_record', dataset=dataset.dataset) }}">
     <div class="govuk-form-group">
       {% for field in form_fields %}
-        {{ govukInput({
-            "label": {
-              "text": field.name,
-              "classes": "govuk-label",
-            },
-            "id": field.field,
-            "name": field.field
-            })
-        }}
+        {{ appField(field, True if form.errors[field.field] else False) }}
       {% endfor %}
       {{ form.csrf_token }}
     </div>
-    <input type="submit" value="Add">
+    {{
+      govukButton({
+        "text": "Add record",
+        "type": "submit"
+      })
+    }}
   </form>
 </div>
 {% endblock content %}
