--- a/application/templates/datasets.html
+++ b/application/templates/datasets.html
@@ -25,7 +25,7 @@
           <td class="govuk-table__cell govuk-table__cell--numeric">
             <ul class="govuk-list app-list--inline govuk-!-margin-bottom-0">
               <li><a href="{{url_for('main.schema', dataset=dataset.dataset)}}" class="govuk-!-font-size-16"><span class="govuk-visually-hidden">View </span>Schema</a></li>
-              <li><a href="#" class="govuk-!-font-size-16">Download</a></li>
+              <li><a href="{{ url_for('main.csv', dataset=dataset.dataset) }}" class="govuk-!-font-size-16">Download</a></li>
             </ul>
           </td>
         </tr>
