--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -43,7 +43,7 @@
 <header class="govuk-header " role="banner" data-module="govuk-header">
   <div class="govuk-header__container govuk-width-container">
     <div class="govuk-header__logo">
-      <a href="/dataset" class="govuk-header__link govuk-header__link--homepage">
+      <a href="{{ url_for('main.index') }}" class="govuk-header__link govuk-header__link--homepage">
         DLUHC Datasets
       </a>
     </div>
@@ -55,7 +55,7 @@
         <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" hidden>Menu</button>
         <ul id="navigation" class="govuk-header__navigation-list">
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="/dataset">
+            <a class="govuk-header__link" href="{{ url_for('main.index') }}">
               Datasets
             </a>
           </li>
