--- a/application/templates/edit_record.html
+++ b/application/templates/edit_record.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-l">DLUHC Dataset Editor</h1>
+    <h1 class="govuk-heading-l">Edit record</h1>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -11,19 +11,16 @@
     <form method="POST" action="{{ url_for('main.edit_record', dataset=dataset.dataset, record_id=record.id) }}">
       <div class="govuk-form-group">
         {% for field in form_fields %}
-            {{ govukInput({
-            "label": {
-            "text": field.name,
-            "classes": "govuk-label",
-            },
-            "id": field.field,
-            "name": field.field,
-            "value": record.data.get(field.field, ''),
-            })
-          }}
+          {{ appField(field, True if form.errors[field.field] else False, record.data.get(field.field, '')) }}
         {% endfor %}
         {{ form.csrf_token }}
-      <input type="submit" value="Edit">
+      </div>
+    {{
+      govukButton({
+        "text": "Edit record",
+        "type": "submit"
+      })
+    }}
     </form>
   </div>
 {% endblock content %}
