adds basic support page

--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -60,7 +60,7 @@
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="#">
+            <a class="govuk-header__link" href="/support">
               Support
             </a>
           </li>
