--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -1,11 +1,13 @@
 :root {
   --govuk-frontend-version: "4.7.0"; }
 
-.govuk-link {
+.govuk-link, a {
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
 
 /*! Copyright (c) 2011 by Margaret Calvert & Henrik Kubel. All rights reserved. The font has been customised for exclusive use on gov.uk. This cut is not commercially available. */
 /* stylelint-disable-line scss/comment-no-loud  */
@@ -23,9 +25,15 @@
   src: url("/static/govuk/assets/fonts/bold-b542beb274-v2.woff2") format("woff2"), url("/static/govuk/assets/fonts/bold-affa96571d-v2.woff") format("woff");
   font-display: fallback; }
   @media print {
-    .govuk-link {
+    .govuk-link, a {
       font-family: sans-serif; } }
-  .govuk-link:focus {
+  .govuk-link:hover, a:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
+  .govuk-link:focus, a:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
     background-color: #ffdd00;
@@ -33,18 +41,18 @@
     text-decoration: none;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; }
-  .govuk-link:link {
+  .govuk-link:link, a:link {
     color: #1d70b8; }
-  .govuk-link:visited {
+  .govuk-link:visited, a:visited {
     color: #4c2c92; }
-  .govuk-link:hover {
+  .govuk-link:hover, a:hover {
     color: #003078; }
-  .govuk-link:active {
+  .govuk-link:active, a:active {
     color: #0b0c0c; }
-  .govuk-link:focus {
+  .govuk-link:focus, a:focus {
     color: #0b0c0c; }
   @media print {
-    .govuk-link[href^="/"]:after, .govuk-link[href^="http://"]:after, .govuk-link[href^="https://"]:after {
+    .govuk-link[href^="/"]:after, a[href^="/"]:after, .govuk-link[href^="http://"]:after, a[href^="http://"]:after, .govuk-link[href^="https://"]:after, a[href^="https://"]:after {
       content: " (" attr(href) ")";
       font-size: 90%;
       word-wrap: break-word; } }
@@ -387,7 +395,7 @@
     .govuk-body-l, .govuk-body-lead {
       margin-bottom: 30px; } }
 
-.govuk-body-m, .govuk-body {
+.govuk-body-m, .govuk-body, p {
   color: #0b0c0c;
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -399,22 +407,22 @@
   margin-top: 0;
   margin-bottom: 15px; }
   @media print {
-    .govuk-body-m, .govuk-body {
+    .govuk-body-m, .govuk-body, p {
       color: #000000; } }
   @media print {
-    .govuk-body-m, .govuk-body {
+    .govuk-body-m, .govuk-body, p {
       font-family: sans-serif; } }
   @media (min-width: 40.0625em) {
-    .govuk-body-m, .govuk-body {
+    .govuk-body-m, .govuk-body, p {
       font-size: 19px;
       font-size: 1.1875rem;
       line-height: 1.31579; } }
   @media print {
-    .govuk-body-m, .govuk-body {
+    .govuk-body-m, .govuk-body, p {
       font-size: 14pt;
       line-height: 1.15; } }
   @media (min-width: 40.0625em) {
-    .govuk-body-m, .govuk-body {
+    .govuk-body-m, .govuk-body, p {
       margin-bottom: 20px; } }
 
 .govuk-body-s {
@@ -483,30 +491,32 @@
     .govuk-body-l + .govuk-heading-l, .govuk-body-lead + .govuk-heading-l {
       padding-top: 10px; } }
 
-.govuk-body-m + .govuk-heading-l, .govuk-body + .govuk-heading-l,
+.govuk-body-m + .govuk-heading-l, .govuk-body + .govuk-heading-l, p + .govuk-heading-l,
 .govuk-body-s + .govuk-heading-l,
 .govuk-list + .govuk-heading-l {
   padding-top: 15px; }
   @media (min-width: 40.0625em) {
-    .govuk-body-m + .govuk-heading-l, .govuk-body + .govuk-heading-l,
+    .govuk-body-m + .govuk-heading-l, .govuk-body + .govuk-heading-l, p + .govuk-heading-l,
     .govuk-body-s + .govuk-heading-l,
     .govuk-list + .govuk-heading-l {
       padding-top: 20px; } }
 
-.govuk-body-m + .govuk-heading-m, .govuk-body + .govuk-heading-m,
+.govuk-body-m + .govuk-heading-m, .govuk-body + .govuk-heading-m, p + .govuk-heading-m,
 .govuk-body-s + .govuk-heading-m,
 .govuk-list + .govuk-heading-m,
 .govuk-body-m + .govuk-heading-s,
 .govuk-body + .govuk-heading-s,
+p + .govuk-heading-s,
 .govuk-body-s + .govuk-heading-s,
 .govuk-list + .govuk-heading-s {
   padding-top: 5px; }
   @media (min-width: 40.0625em) {
-    .govuk-body-m + .govuk-heading-m, .govuk-body + .govuk-heading-m,
+    .govuk-body-m + .govuk-heading-m, .govuk-body + .govuk-heading-m, p + .govuk-heading-m,
     .govuk-body-s + .govuk-heading-m,
     .govuk-list + .govuk-heading-m,
     .govuk-body-m + .govuk-heading-s,
     .govuk-body + .govuk-heading-s,
+    p + .govuk-heading-s,
     .govuk-body-s + .govuk-heading-s,
     .govuk-list + .govuk-heading-s {
       padding-top: 10px; } }
@@ -1080,6 +1090,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em;
   display: inline-block;
   position: relative;
   margin-top: 15px;
@@ -1097,6 +1109,12 @@
   @media print {
     .govuk-back-link {
       font-family: sans-serif; } }
+  .govuk-back-link:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-back-link:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -1236,10 +1254,18 @@
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
   @media print {
     .govuk-breadcrumbs__link {
       font-family: sans-serif; } }
+  .govuk-breadcrumbs__link:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-breadcrumbs__link:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -2279,7 +2305,16 @@
     box-decoration-break: clone; }
 
 .govuk-details__summary-text {
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
+
+.govuk-details__summary:hover .govuk-details__summary-text {
+  text-decoration-thickness: max(3px, .1875rem, .12em);
+  -webkit-text-decoration-skip-ink: none;
+  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip: none;
+  text-decoration-skip: none; }
 
 .govuk-details__summary:focus .govuk-details__summary-text {
   text-decoration: none; }
@@ -2406,10 +2441,18 @@
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
   @media print {
     .govuk-error-summary__list a {
       font-family: sans-serif; } }
+  .govuk-error-summary__list a:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-error-summary__list a:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -2571,10 +2614,18 @@
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
   @media print {
     .govuk-footer__link {
       font-family: sans-serif; } }
+  .govuk-footer__link:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-footer__link:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -3193,10 +3244,18 @@
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: underline; }
+  text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em; }
   @media print {
     .govuk-notification-banner__link {
       font-family: sans-serif; } }
+  .govuk-notification-banner__link:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-notification-banner__link:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -3352,7 +3411,17 @@
       bottom: 0;
       left: 0; } }
   .govuk-pagination__link:hover .govuk-pagination__link-title--decorated, .govuk-pagination__link:active .govuk-pagination__link-title--decorated {
-    text-decoration: underline; }
+    text-decoration: underline;
+    text-decoration-thickness: max(1px, .0625rem);
+    text-underline-offset: 0.1578em; }
+  .govuk-pagination__link:hover .govuk-pagination__link-label,
+  .govuk-pagination__link:hover .govuk-pagination__link-title--decorated, .govuk-pagination__link:active .govuk-pagination__link-label,
+  .govuk-pagination__link:active .govuk-pagination__link-title--decorated {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-pagination__link:focus .govuk-pagination__icon {
     color: #0b0c0c; }
   .govuk-pagination__link:focus .govuk-pagination__link-label {
@@ -3369,6 +3438,8 @@
   font-size: 1rem;
   line-height: 1.25;
   text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em;
   display: inline-block;
   padding-left: 30px; }
   @media print {
@@ -3705,11 +3776,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em;
   display: inline-block;
   margin-bottom: 10px; }
   @media print {
     .govuk-tabs__tab {
       font-family: sans-serif; } }
+  .govuk-tabs__tab:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .govuk-tabs__tab:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
@@ -4074,6 +4153,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em;
   font-size: 14px;
   font-size: 0.875rem;
   line-height: 1.14286;
@@ -4120,7 +4201,8 @@
   .govuk-skip-link:focus {
     outline: 3px solid #ffdd00;
     outline-offset: 0;
-    background-color: #ffdd00; }
+    background-color: #ffdd00;
+    box-shadow: none; }
 
 .govuk-skip-link-focused-element:focus {
   outline: none; }
@@ -7126,6 +7208,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: underline;
+  text-decoration-thickness: max(1px, .0625rem);
+  text-underline-offset: 0.1578em;
   display: block;
   position: relative;
   padding-top: 12px;
@@ -7135,6 +7219,12 @@
   @media print {
     .dl-subnav__list-item__link {
       font-family: sans-serif; } }
+  .dl-subnav__list-item__link:hover {
+    text-decoration-thickness: max(3px, .1875rem, .12em);
+    -webkit-text-decoration-skip-ink: none;
+    text-decoration-skip-ink: none;
+    -webkit-text-decoration-skip: none;
+    text-decoration-skip: none; }
   .dl-subnav__list-item__link:focus {
     outline: 3px solid transparent;
     color: #0b0c0c;
