Update assets paths

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -1,7 +1,5 @@
 // import all digital land and GOVUK Frontend scss
-$app-images-path: "/statics/images/";
-// $govuk-font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
-$govuk-assets-path: "/static/images/govuk/assets/";
+$app-images-path: "/static/images/";
 $govuk-global-styles: true;
 $govuk-new-link-styles: true;
 
