--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -7,6 +7,7 @@ $govuk-new-link-styles: true;
 
 // components
 @import "components/button-menu";
+@import "components/table";
 
 // app specific component scss
 .app-list--inline {
@@ -16,24 +17,5 @@ $govuk-new-link-styles: true;
     &:last-child {
       margin-right: 0;
     }
-  }
-}
-
-.app-data-table {
-  table-layout:fixed;
-  border-collapse: collapse;
-  thead {
-    tr {
-      background-color: govuk-colour('light-grey');
-    }
-  }
-  th, td {
-    padding: 0.35em;
-    @include govuk-font(19)
-  }
-  th {
-    @include govuk-font(16, bold, true);
-    padding-top: 1em;
-    padding-bottom: 1em;
   }
 }
