--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7421,61 +7421,45 @@ p + .govuk-heading-s,
 .app-button-menu [aria-expanded="false"] + [role=menu] {
   display: none; }
 
+.app-table-container {
+  overflow-x: scroll;
+  width: 100%;
+  border: 1px solid #f3f2f1; }
+
 .app-data-table {
-  table-layout: fixed;
-  border-collapse: collapse; }
-  .app-data-table thead tr {
-    background-color: #f3f2f1; }
-  .app-data-table th, .app-data-table td {
-    padding: 0.35em;
-    font-family: "GDS Transport", arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-weight: 400;
-    font-size: 16px;
-    font-size: 1rem;
-    line-height: 1.25; }
-    @media print {
-      .app-data-table th, .app-data-table td {
-        font-family: sans-serif; } }
-    @media (min-width: 40.0625em) {
-      .app-data-table th, .app-data-table td {
-        font-size: 19px;
-        font-size: 1.1875rem;
-        line-height: 1.31579; } }
-    @media print {
-      .app-data-table th, .app-data-table td {
-        font-size: 14pt;
-        line-height: 1.15; } }
-  .app-data-table th {
-    font-family: "GDS Transport", arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-feature-settings: "tnum" 1;
-    font-feature-settings: "tnum" 1;
-    font-weight: 700;
-    font-size: 16px;
-    font-size: 1rem;
-    line-height: 1.25;
+  border-collapse: collapse;
+  border: 0; }
+  .app-data-table__header {
+    background-color: #f3f2f1;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     padding-top: 1em;
-    padding-bottom: 1em; }
-    @media print {
-      .app-data-table th {
-        font-family: sans-serif; } }
-    @supports (font-variant-numeric: tabular-nums) {
-      .app-data-table th {
-        -webkit-font-feature-settings: normal;
-        font-feature-settings: normal;
-        font-variant-numeric: tabular-nums; } }
-    @media (min-width: 40.0625em) {
-      .app-data-table th {
-        font-size: 19px;
-        font-size: 1.1875rem;
-        line-height: 1.31579; } }
-    @media print {
-      .app-data-table th {
-        font-size: 14pt;
-        line-height: 1.15; } }
+    padding-bottom: 1em;
+    vertical-align: middle;
+    text-align-last: left;
+    box-shadow: 0 0 0 1px white; }
+  .app-data-table thead tr:first-child td:not(.app-data-table__header--ui), .app-data-table thead tr:first-child th:not(.app-data-table__header--ui) {
+    border-top-width: 2px; }
+  .app-data-table tbody tr:first-child td:not(.app-data-table__cell--ui), .app-data-table tbody tr:first-child th:not(.app-data-table__cell--ui) {
+    border-top-width: 2px; }
+  .app-data-table tbody tr:last-child td:not(.app-data-table__cell--ui), .app-data-table tbody tr:last-child th:not(.app-data-table__cell--ui) {
+    border-bottom-width: 2px; }
+  .app-data-table__header, .app-data-table__cell {
+    padding: 15px;
+    border: 1px solid #b1b4b6;
+    vertical-align: top; }
+    .app-data-table__header:first-child, .app-data-table__cell:first-child {
+      border-left-width: 2px; }
+    .app-data-table__header:last-child, .app-data-table__cell:last-child {
+      border-left-width: 2px; }
+    .app-data-table__header--ui, .app-data-table__cell--ui {
+      border-width: 0;
+      background: 0;
+      box-shadow: none;
+      padding-left: 15px;
+      padding-right: 15px; }
+  .app-data-table__cell {
+    font-family: 'Courier New', Courier, monospace; }
 
 .app-table {
   background-color: transparent;
