--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7424,11 +7424,20 @@ p + .govuk-heading-s,
 .app-table-container {
   overflow-x: scroll;
   width: 100%;
-  border: 1px solid #f3f2f1; }
+  border: 1px solid darkgray;
+  background-image: linear-gradient(to right, white, white), linear-gradient(to right, white, white), linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0)), linear-gradient(to left, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0));
+  background-position: left center, right center, left center, right center;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-size: 20px 100%, 20px 100%, 10px 100%, 10px 100%;
+  /* Opera doesn't support this in the shorthand */
+  background-attachment: local, local, scroll, scroll; }
 
 .app-data-table {
   border-collapse: collapse;
-  border: 0; }
+  border-spacing: 0;
+  border-style: solid;
+  border: 1px solid #f3f2f1; }
   .app-data-table__header {
     background-color: #f3f2f1;
     font-family: Arial, Helvetica, sans-serif;
@@ -7436,8 +7445,7 @@ p + .govuk-heading-s,
     padding-top: 1em;
     padding-bottom: 1em;
     vertical-align: middle;
-    text-align-last: left;
-    box-shadow: 0 0 0 1px white; }
+    text-align-last: left; }
   .app-data-table thead tr:first-child td:not(.app-data-table__header--ui), .app-data-table thead tr:first-child th:not(.app-data-table__header--ui) {
     border-top-width: 2px; }
   .app-data-table tbody tr:first-child td:not(.app-data-table__cell--ui), .app-data-table tbody tr:first-child th:not(.app-data-table__cell--ui) {
@@ -7454,8 +7462,6 @@ p + .govuk-heading-s,
       border-left-width: 2px; }
     .app-data-table__header--ui, .app-data-table__cell--ui {
       border-width: 0;
-      background: 0;
-      box-shadow: none;
       padding-left: 15px;
       padding-right: 15px; }
   .app-data-table__cell {
