--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -3,14 +3,17 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-l">{{ dataset.name }}</span>
     <h1 class="govuk-heading-l">{{ dataset.records | length }} records</h1>
   </div>
-  {% if session["user"] %}
-    <div class="govuk-grid-column-one-half govuk-!-text-align-right">
+</div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    {% if session["user"] %}
       {{
         buttonMenu({
+          "classes": "govuk-!-margin-bottom-3",
           "items": [
             {
               "element": "a",
@@ -20,9 +23,10 @@
           ]
         })
       }}
-    </div>
-  {% endif %}
+    {% endif %}
+  </div>
 </div>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     {% if dataset.records | length > 0 %}
@@ -67,7 +71,7 @@
         </tbody>
       </table>
     </section>
-      <p class="govuk-body"><a href="{{url_for('main.schema', dataset=dataset.dataset)}}">View schema</a></p>
+    <p class="govuk-body"><a href="{{url_for('main.schema', dataset=dataset.dataset)}}">View schema</a></p>
     {% else %}
       {{
         govukInsetText({
