--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -19,11 +19,46 @@
 
 	/* Opera doesn't support this in the shorthand */
 	background-attachment: local, local, scroll, scroll;
+
+  scrollbar-width: thin;
+  scrollbar-color: #8A8A8A #DFE9EB;
+
+  /* Chrome, Edge and Safari */
+  &::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+  }
+
+  &::-webkit-scrollbar-track:hover {
+    background-color: #B8C0C2;
+  }
+
+  &::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: $govuk-border-colour;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #5F5F5F;
+  }
+
+  &::-webkit-scrollbar-thumb:active {
+    background-color: #474D54;
+  }
+
 }
 
 .app-data-table {
   border-collapse: collapse;
-  border-spacing: 0;
+  table-layout: fixed;
   border-style: solid;
   border: 1px solid govuk-colour('light-grey');
   &__header {
@@ -66,6 +101,8 @@
   &__header, &__cell {
     @include govuk-responsive-padding(3);
     border: 1px solid $govuk-border-colour;
+    max-width: 100%;
+    white-space: nowrap;
     vertical-align: top;
     &:first-child {
       border-left-width: 2px;
@@ -82,6 +119,8 @@
   &__cell {
     font-family: 'Courier New', Courier, monospace;
     &--ui {
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 }
